[package]
name = "photon_garden"
version = "0.1.0"
authors = ["noisemachines <thomas@noisemachines.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
fs_extra = "1.2.0"
chrono = "0.4"
nanorand = "0.5.2"
contour = "0.1.0"
itertools = "0.10.1"
graphlib = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.10.2"
automod = "1.0.2"
svg = "0.10.0"
geo = "0.18.0"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "smooth"
harness = false

[profile.release]
debug = false
incremental = true
